# gameboy-rs

./: Cargo.toml  README.md  TODO.md
app/: Cargo.toml
app/src/: debugger.rs  graphics.rs  lib.rs
app/src/debugger/: opcode.rs
desktop/: Cargo.toml
desktop/src/: main.rs
gameboy-core/src/: bus.rs  cartridge.rs  cpu.rs  lib.rs  util.rs
gameboy-core/src/bus/: apu.rs  cartridge.rs  cgb.rs  dma.rs  interrupts.rs  ir.rs  joypad.rs  ppu.rs  serial.rs  timer.rs  wram.rs
gameboy-core/src/bus/apu/: components.rs
gameboy-core/src/bus/ppu/: cdma.rs  dma.rs
gameboy-core/src/cartridge/: mbc0.rs  mbc1.rs  mbc3.rs  mbc_funcs.rs
gameboy-core/src/cpu/: registers.rs
pixels/: Cargo.toml
pixels/src/: builder.rs  lib.rs
src/: app.rs  debugger.rs  gb.rs  main.rs
src/debugger/: opcode.rs
src/gb/: bios.rs  bus.rs  cpu.rs  debugger.rs  util.rs
src/gb/bus/: cartridge.rs  cgb.rs  dma.rs  interrupts.rs  joypad.rs  ppu.rs  serial.rs  timer.rs  wram.rs
src/gb/cpu/: registers.rs
src/gb/debugger/: opcode.rs
src/pixels/: builder.rs  mod.rs  renderers.rs
web/: Cargo.toml  index.html
web/src/: lib.rs
