[package]
name = "gameboy"
version = "0.1.0"
edition = "2024"

[dependencies]
winit = { version = "0.30" }
instant = "0.1"
pollster = "0.4"
wgpu = { version = "27" }
glam = { version = "0.32", features = ["bytemuck"] }
bytemuck = "1"

tracing = "0.1"
tracing-subscriber = "0.3"

egui = "0.33"
egui-winit = "0.33"
egui-wgpu = "0.33"