[package]
name = "web"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
app = { path = "../app" }
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    'HtmlCanvasElement',
    'DragEvent',
    'DataTransfer',
    'DataTransferItem',
    'Event',
    'File',
    'FileList',
    'DataTransferItemList',
    "Document",
    "Window",
    "Element",
    "Location",
] }